<resources>
    <string name="app_name">Food_Application</string>
    <string name="the_food_app">The Food App</string>
    <string name="slogan_food">Hello Explore Your Dream Food</string>
    <string name="sign_in">Get Started</string>
    <string name="home_title">Trang chủ</string>
    <string name="cart_title">Giỏ hàng</string>
    <string name="like_title">Thích</string>
    <string name="notify_title">Thông báo</string>
    <string name="person_title">Tôi</string>
    <string name="home_fragment">Home fragment</string>
    <string name="cart_fragment">CartFragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="notify_fragment">Notify fragment</string>
    <string name="customer_fragment">Customer fragment</string>
    <string name="find_your_food">Tìm kiểm sản phẩm</string>
    <string name="my_address">123 Đường 456, Tăng Nhơn Phú A, TP. Thủ Đức, Hồ Chí Minh</string>
    <string name="giao_den">Giao đến:</string>
    <string name="lbcategories">Danh mục</string>
    <string name="lbpopular">Phổ biến</string>
    <string name="lbsupplier">Nhà sản xuất</string>
    <string name="user_name">User Name</string>
    <string name="xacthucemail">Xác thực email để nhận thông tin ưu đãi.</string>
    <string name="inputemail">Nhập Email</string>
    <string name="voucher">Ví Voucher</string>
    <string name="shopee_xu">Shopee Xu</string>
    <string name="payment">Thanh toán</string>
    <string name="myaddress">Địa chỉ</string>
    <string name="invite">Mời bạn bè</string>
    <string name="support">Trung tâm Trợ giúp</string>
    <string name="apphost">Ứng dụng cho Chủ quán</string>
    <string name="policy">Chính sách quy định</string>
    <string name="setting">Cài đặt</string>
    <string name="aboutme">Về chúng tôi</string>
    <string name="titlelogout">Đăng xuất</string>
    <string name="lbCapNhat">Cập nhật quan trọng</string>
    <string name="chuacokhuyenmai">Chưa có khuyến mãi nào</string>
    <string name="chuacotintucnao">Chưa có tin tức nào</string>
    <string name="notecoming">Quên chưa đặt món rồi nè bạn ơi?</string>
    <string name="notecoming2">Bạn sẽ nhìn thấy các món đang được\nchuẩn bị hoặc giao đi tại đây để kiểm tra\nđơn hàng nhanh hơn!</string>
    <string name="notecomingcotheban">Có thể bạn sẽ thích</string>
    <string name="lbnumberphone">Số điện thoại</string>
    <string name="titlechinhsach">Chính sách quy định của Foody</string>
    <string name="notelogin4">Bằng cách đăng nhập hoặc đăng ký, bạn đồng ý với</string>
    <string name="lbuser_name_and_email">Nhập tên đăng nhập hoặc email</string>
    <string name="lb_input_password">Nhập mật khẩu</string>
    <string name="lbdangnhap">Đăng nhập</string>
    <string name="lb_tieptuc">Tiếp tục</string>
    <string name="lb_dangnhap_matkhau">Đăng nhập bằng Mật khẩu</string>
    <string name="lb_tieptuc_voi_gg">Tiếp tục với Google</string>
    <string name="lb_tieptuc_fb">Tiếp tục với Facebook</string>
    <string name="lb_tieptuc_apple">Tiếp tục với Apple</string>
    <string name="forgotpass">Quên ?</string>
    <string name="titlehelper">Trung tâm trợ giúp</string>
    <string name="titletb">Vui lòng liên hệ tổng đài\n19001234</string>
    <string name="textprocductname">Product Name</string>
    <string name="textaddtocart">Thêm giỏ hàng</string>
    <string name="infoproduct">Thông tin sản phẩm</string>
    <string name="textgiohang">Giỏ hàng của tôi</string>
    <string name="lbItemTotal">Sản phẩm</string>
    <string name="lbdeliverService">Phí vận chuyển</string>
    <string name="vat">VAT</string>
    <string name="titleTotal">Tổng tiền</string>
    <string name="textcheckout">Đặt hàng</string>
    <string name="note1">Chưa có sản phẩm được thêm vào!</string>
    <string name="note2">Giỏ hàng sẽ được cập nhật khi bạn thêm sản phẩm.</string>
    <string name="vnd">đ</string>
    <string name="deleteproduct">Xóa sản phẩm</string>
    <string name="textCom">Cơm</string>
    <string name="text100">(100+)</string>
    <string name="textrating">4.7</string>
    <string name="timer">20phút</string>
    <string name="textnaemfd">Hồng trà ngô gia</string>
    <string name="shop_name">Shop Name</string>
    <string name="_4_7">4.7</string>
    <string name="_0_6km">0.6km</string>
    <string name="texttime">20phút</string>
    <string name="textdialogcheckout">Thông tin đơn hàng</string>
    <string name="t_ng">Tổng</string>
    <string name="texttomtatdh">Tóm tắt đơn hàng</string>
    <string name="textpayment">Phương thức thanh toán</string>
    <string name="textthanhtoankhinhanhhang">Thanh toán khi nhận hàng</string>
    <string name="textthanhtoanmomo">Ví điện tử MoMo</string>
    <string name="textzalopay">Zalopay</string>
    <string name="thanh_to_n_th_nh_c_ng">Thanh toán thành công</string>
    <string name="note111">Cảm ơn bạn đã sử dụng dịch vụ của chúng tôi!</string>
    <string name="note11111">Trở về trang chủ</string>
    <string name="changeaddress">Thay đổi địa chỉ</string>
    <string name="infothongtin">Thông tin người dùng</string>
    <string name="textinputnow">Nhập mật khẩu hiện tại</string>
    <string name="textinputnew">Nhập mật khẩu mới</string>
    <string name="textthanhvien">Đăng ký thành viên</string>
    <string name="gi_i_t_nh">Giới tính</string>
    <string name="registertextt">Đăng ký</string>
</resources>