<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">

    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/background_foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/background_img_21" />


    <TextView
        android:id="@+id/txtTieude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/leckerli_one"

        android:shadowColor="#80000000"
        android:shadowRadius="20"

        android:text="@string/the_food_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4" />

    <TextView
        android:id="@+id/txtTieuDePhu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan_food"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTieude" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:padding="14dp"
        android:textSize="20sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTieuDePhu"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintWidth_percent=".8"
      />
</androidx.constraintlayout.widget.ConstraintLayout>